fix burger, overflow

--- a/src/styles/components/connect-wallet.sass
+++ b/src/styles/components/connect-wallet.sass
@@ -15,11 +15,16 @@
     border-radius: 24px 24px 0 0
     box-shadow: 0 -10px 10px 4px rgba($accent-dark, 50%)
     background-color: $mobile-background-color
-    transition: 0.6s
-    z-index: 15
+    transition: 0.3s
+    touch-action: none
+    opacity: 0
+    z-index: -1
     &--opened
       top: 122px
       left: 0
+      opacity: 1
+      touch-action: auto
+      z-index: 15
   &__inner-wrapper
     display: flex
     padding: 0 30px
