--- a/src/styles/components/navigation.sass
+++ b/src/styles/components/navigation.sass
@@ -49,7 +49,7 @@
       box-shadow: 0px 5px 10px 5px rgba($accent-dark, 50%)
       z-index: 10
       &--opened
-        top: 70px
+        top: 60px
   &__logo.navigation__link
     margin-right: 57px
     color: $accent-dark
@@ -138,10 +138,10 @@
         transition: 0.3s
         content: ''
     &--opened span
-      transform: translateX(100px)
+      transform: translateX(-100px)
       &::before
         top: 0
-        transform: translateX(-100px) rotate(45deg) 
+        transform: translateX(100px) rotate(45deg) 
       &::after
         bottom: 0
-        transform: translateX(-100px) rotate(-45deg)
+        transform: translateX(100px) rotate(-45deg)
